# workflow-orchestrator-mcp

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/bdd-feedback-loop/: SKILL.md
.github/skills/bdd-testing/: SKILL.md
.github/skills/bdd-testing/references/: test-patterns.md
.github/skills/conventional-commits/: SKILL.md
.github/skills/feature-workflow/: SKILL.md
.github/skills/plan-updates/: SKILL.md
.github/skills/skill-compliance/: SKILL.md
.github/skills/tool-usage/: SKILL.md
.github/workflows/: ci.yml  release.yml  sync-skills.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  WORKFLOW_FORMAT.md
docs/demo workflows/: analyze_azure_devops_mcp.md  analyze_github_repo.md  failure_handling_demo.md  pr_review_workflow.md  simple_repo_lookup.md  test_quality_assessment.md
src/workflow_orchestrator_mcp/: __init__.py  server.py
src/workflow_orchestrator_mcp/common/: __init__.py  error_handling.py  errors.py  logging.py  prompt_builder.py  workflow_parser.py  workflow_state.py
src/workflow_orchestrator_mcp/resources/: workflow_template.md
src/workflow_orchestrator_mcp/tools/: __init__.py  workflow_tools.py
tests/: __init__.py  conftest.py  test_coverage_gaps.py  test_error_handling.py  test_feedback_loop.py  test_integration.py  test_logging.py  test_parsing.py  test_prompt_building.py  test_prompts_and_resources.py  test_result_validation.py  test_server.py  test_variable_flow.py  test_workflow_errors.py  test_workflow_execution.py
tests/fixtures/: multi_step_workflow.md  simple_workflow.md  workflow_with_assertions.md
