[project]
name = "workflow-orchestrator-mcp"
dynamic = ["version"]
description = "MCP server for orchestrating AI workflows defined in markdown with natural language"
authors = [
    { name = "Jack Pines", email = "github@jackpines.info" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "actionable-errors>=0.1.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "taskipy>=1.14,<2",
]

[project.scripts]
workflow-orchestrator-mcp = "workflow_orchestrator_mcp.server:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "." }

[tool.hatch.build.hooks.vcs]
version-file = "src/workflow_orchestrator_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_orchestrator_mcp"]

[tool.taskipy.tasks]
lint   = "uv run ruff check --fix src/ tests/"
format = "uv run ruff format src/ tests/"
type   = "uv run mypy src/"
test   = "uv run pytest tests/ -v"
cov    = "uv run pytest tests/ --cov=workflow_orchestrator_mcp --cov-report=term-missing"
check  = "task lint && task type && task test"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["src/workflow_orchestrator_mcp/_version.py"]  # auto-generated by hatch-vcs

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "workflow_orchestrator_mcp._version"
ignore_errors = true  # auto-generated by hatch-vcs

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = []                          # hatch-vcs owns the version; PSR only tags
version_variables = []                     # no hardcoded __version__ to patch
commit_message = "chore(release): {version}"
tag_format = "v{version}"
branch = "main"
build_command = ""                         # no build step — hatch-vcs handles it
upload_to_pypi = false                     # not publishing to PyPI (yet)
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
